se elimina item menu y se cambia color botones

--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ a {
     text-decoration: none;
     width: 40px;
     border-radius: 20px;
-    background-color: cadetblue;
+    background-color: rgb(29, 247, 255);
     padding: 20px;
     color: aliceblue;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
